add memo about create a runnable jar for JavaFX application